--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     repositories {
         jcenter()
+        maven { url "https://plugins.gradle.org/m2/" }
     }
     dependencies {
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.2'
@@ -23,6 +24,7 @@ props.each { key, val ->
 repositories {
     mavenLocal()
     jcenter()
+    maven { url "https://plugins.gradle.org/m2/" }
 }
 
 sourceCompatibility = 1.6
