--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -2,9 +2,10 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
     }
     dependencies {
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.2'
+        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
@@ -25,6 +26,7 @@ repositories {
     mavenLocal()
     jcenter()
     maven { url "https://plugins.gradle.org/m2/" }
+    maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
 }
 
 sourceCompatibility = 1.6
