--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -2,10 +2,11 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://releases.jfrog.io/artifactory/oss-releases/" }
         maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
     }
     dependencies {
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.1'
+        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.2'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
     }
 }
