--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -27,6 +27,7 @@ repositories {
     mavenLocal()
     jcenter()
     maven { url "https://plugins.gradle.org/m2/" }
+    maven { url "https://releases.jfrog.io/artifactory/oss-releases/" }
     maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
 }
 
