--- a/realm-annotations/build.gradle
+++ b/realm-annotations/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://releases.jfrog.io/artifactory/oss-releases/" }
+        maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
     }
     dependencies {
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.2'
