--- a/realm-transformer/build.gradle
+++ b/realm-transformer/build.gradle
@@ -2,6 +2,8 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://releases.jfrog.io/artifactory/oss-releases/" }
+        maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
     }
     dependencies {
         classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.2'
@@ -19,7 +21,6 @@ allprojects {
 
 apply plugin: 'groovy'
 apply plugin: 'java'
-apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'com.jfrog.artifactory'
 apply plugin: 'com.jfrog.bintray'
