--- a/realm/build.gradle
+++ b/realm/build.gradle
@@ -6,6 +6,8 @@ buildscript {
         jcenter()
         maven { url 'https://jitpack.io' }
         maven { url "https://plugins.gradle.org/m2/" }
+        maven { url "https://releases.jfrog.io/artifactory/oss-releases/" }
+        maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
     }
 
     dependencies {
