--- a/realm-transformer/build.gradle
+++ b/realm-transformer/build.gradle
@@ -63,7 +63,7 @@ dependencies {
     provided 'com.android.tools.build:gradle:2.1.0'
     compile 'org.javassist:javassist:3.20.0-GA'
 
-    testCompile('org.spockframework:spock-core:1.0-groovy-2.4') {
+    testImplementation('org.spockframework:spock-core:1.0-groovy-2.4') {
         exclude module: 'groovy-all'
     }
 }
