--- a/realm/realm-annotations-processor/build.gradle
+++ b/realm/realm-annotations-processor/build.gradle
@@ -10,11 +10,11 @@ dependencies {
     compile "com.squareup:javawriter:2.5.0"
     compile "io.realm:realm-annotations:${version}"
 
-    testCompile files('../realm-library/build/intermediates/bundles/baseRelease/classes.jar') // Java projects cannot depend on AAR files
-    testCompile files("${System.properties['java.home']}/../lib/tools.jar") // This is needed otherwise compile-testing won't be able to find it
-    testCompile group:'junit', name:'junit', version:'4.12'
-    testCompile group:'com.google.testing.compile', name:'compile-testing', version:'0.6'
-    testCompile files(file("${System.env.ANDROID_HOME}/platforms/android-26/android.jar"))
+    testImplementation files('../realm-library/build/intermediates/bundles/baseRelease/classes.jar') // Java projects cannot depend on AAR files
+    testImplementation files("${System.properties['java.home']}/../lib/tools.jar") // This is needed otherwise compile-testing won't be able to find it
+    testImplementation group:'junit', name:'junit', version:'4.12'
+    testImplementation group:'com.google.testing.compile', name:'compile-testing', version:'0.6'
+    testImplementation files(file("${System.env.ANDROID_HOME}/platforms/android-26/android.jar"))
 }
 
 // for Ant filter
