--- a/realm/realm-annotations-processor/build.gradle
+++ b/realm/realm-annotations-processor/build.gradle
@@ -7,8 +7,8 @@ sourceCompatibility = '1.6'
 targetCompatibility = '1.6'
 
 dependencies {
-    compile "com.squareup:javawriter:2.5.0"
-    compile "io.realm:realm-annotations:${version}"
+    implementation "com.squareup:javawriter:2.5.0"
+    implementation "io.realm:realm-annotations:${version}"
 
     testImplementation files('../realm-library/build/intermediates/bundles/baseRelease/classes.jar') // Java projects cannot depend on AAR files
     testImplementation files("${System.properties['java.home']}/../lib/tools.jar") // This is needed otherwise compile-testing won't be able to find it
