--- a/realm-transformer/build.gradle
+++ b/realm-transformer/build.gradle
@@ -57,11 +57,11 @@ sourceSets {
 }
 
 dependencies {
-    compile localGroovy()
-    compile gradleApi()
-    compile "io.realm:realm-annotations:${version}"
+    implementation localGroovy()
+    implementation gradleApi()
+    implementation "io.realm:realm-annotations:${version}"
     provided 'com.android.tools.build:gradle:2.1.0'
-    compile 'org.javassist:javassist:3.20.0-GA'
+    implementation 'org.javassist:javassist:3.20.0-GA'
 
     testImplementation('org.spockframework:spock-core:1.0-groovy-2.4') {
         exclude module: 'groovy-all'
