--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -2,19 +2,12 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
-        maven { url "https://releases.jfrog.io/artifactory/oss-releases/" }
-        maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
     }
-    dependencies {
-        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.5.2'
-        classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-    }
+    dependencies {}
 }
 
 apply plugin: 'groovy'
 apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.artifactory'
-apply plugin: 'com.jfrog.bintray'
 
 def props = new Properties()
 props.load(new FileInputStream("${rootDir}/../realm.properties"))
@@ -26,14 +19,8 @@ repositories {
     mavenLocal()
     jcenter()
     maven { url "https://plugins.gradle.org/m2/" }
-    maven { url "https://releases.jfrog.io/artifactory/oss-releases/" }
-    maven { url "https://groovy.jfrog.io/artifactory/libs-release/" }
 }
 
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
-
-group = 'io.realm'
 version = file("${projectDir}/../version.txt").text.trim();
 
 configurations {
@@ -81,88 +68,4 @@ compileJava.dependsOn generateVersionClass
 
 wrapper {
     gradleVersion = project.gradleVersion
-}
-
-def commonPom = {
-    licenses {
-        license {
-            name 'The Apache Software License, Version 2.0'
-            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-            distribution 'repo'
-        }
-    }
-    issueManagement {
-        system 'github'
-        url 'https://github.com/realm/realm-java/issues'
-    }
-    scm {
-        url 'scm:https://github.com/realm/realm-java'
-        connection 'scm:git@github.com:realm/realm-java.git'
-        developerConnection 'scm:git@github.com:realm/realm-java.git'
-    }
-}
-
-publishing {
-    publications {
-        realmPublication(MavenPublication) {
-            groupId 'io.realm'
-            artifactId = 'realm-gradle-plugin'
-            from components.java
-            pom.withXml {
-                Node root = asNode()
-                root.appendNode('name', 'realm-gradle-plugin')
-                root.appendNode('description', 'Gradle plugin for Realm. Realm is a mobile database: a replacement for SQLite & ORMs.')
-                root.appendNode('url', 'http://realm.io')
-                root.children().last() + commonPom
-            }
-        }
-    }
-    repositories {
-        maven {
-            credentials(AwsCredentials) {
-                accessKey project.hasProperty('s3AccessKey') ? s3AccessKey : 'noAccessKey'
-                secretKey project.hasProperty('s3SecretKey') ? s3SecretKey : 'noSecretKey'
-            }
-            if(project.version.endsWith('-SNAPSHOT')) {
-                url "s3://realm-ci-artifacts/maven/snapshots/"
-            } else {
-                url "s3://realm-ci-artifacts/maven/releases/"
-            }
-        }
-    }
-}
-
-bintray {
-    user = project.hasProperty('bintrayUser') ? bintrayUser : 'noUser'
-    key = project.hasProperty('bintrayKey') ? bintrayKey : 'noKey'
-
-    dryRun = false
-    publish = false
-
-    publications = ['realmPublication']
-    pkg {
-        repo = 'maven'
-        name = 'realm-gradle-plugin'
-        desc = 'Realm for Android'
-        websiteUrl = 'http://realm.io'
-        issueTrackerUrl = 'https://github.com/realm/realm-java/issues'
-        vcsUrl = 'https://github.com/realm/realm-java.git'
-        licenses = ['Apache-2.0']
-        labels = ['android', 'realm']
-        publicDownloadNumbers = false
-    }
-}
-
-artifactory {
-    contextUrl = 'https://oss.jfrog.org/artifactory'
-    publish {
-        repository {
-            repoKey = 'oss-snapshot-local'
-            username = project.hasProperty('bintrayUser') ? bintrayUser : 'noUser'
-            password = project.hasProperty('bintrayKey') ? bintrayKey : 'noKey'
-        }
-        defaults {
-            publications ('realmPublication')
-        }
-    }
 }
